--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,6 +39,25 @@
 
             </RelativeLayout>
 
+
+            <RelativeLayout
+                android:id="@+id/bt_notification_on"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginEnd="5dp"
+                android:layout_centerVertical="true"
+                android:layout_alignParentEnd="true">
+
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_centerVertical="true"
+                    android:layout_centerHorizontal="true"
+                    android:background="@drawable/notification"
+                    android:scaleType="fitCenter"/>
+
+            </RelativeLayout>
+
         </RelativeLayout>
 
         <TextView
