--- a/app/src/main/res/layout/notification.xml
+++ b/app/src/main/res/layout/notification.xml
@@ -1,6 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/layout"
-    android:layout_width="fill_parent"
+    android:layout_width="match_parent"
     android:layout_height="64dp"
     android:padding="10dp" >
     <ImageView
@@ -8,25 +8,54 @@
         android:id="@+id/image"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
-        android:layout_alignParentLeft="true"
-        android:layout_marginRight="10dp" />
+        android:layout_alignParentStart="true"
+        android:layout_marginEnd="10dp" />
     <TextView
-        android:textSize="13dp"
+        android:textSize="14sp"
         android:textColor="#000"
         android:text="Testing"
-        android:id="@+id/title"
+        android:id="@+id/tv_state"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/image"
+        android:layout_toEndOf="@id/image"
+        android:layout_alignTop="@id/image"
+        android:layout_marginTop="2dp"
         />
     <TextView
-        android:textSize="13dp"
+        android:textSize="12sp"
         android:textColor="#000"
         android:text="Testing is awecome"
-        android:id="@+id/text"
+        android:id="@+id/tv_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/image"
-        android:layout_below="@id/title"
+        android:layout_toEndOf="@id/image"
+        android:layout_alignBottom="@id/image"
+        android:layout_marginBottom="4dp"
         />
+    <LinearLayout
+        android:id="@+id/bt_openCheck"
+        android:layout_width="44dp"
+        android:layout_height="44dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="5dp">
+    <ImageView
+        android:layout_width="34dp"
+        android:layout_height="34dp"
+        android:layout_margin="5dp"
+        android:background="@drawable/stopwatch"
+        android:alpha="0.6" />
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/bt_openMain"
+        android:layout_width="44dp"
+        android:layout_height="44dp"
+        android:layout_marginEnd="5dp"
+        android:layout_toStartOf="@+id/bt_openCheck">
+    <ImageView
+        android:layout_width="34dp"
+        android:layout_height="34dp"
+        android:layout_margin="5dp"
+        android:background="@drawable/homepage"
+        android:alpha="0.6"/>
+    </LinearLayout>
 </RelativeLayout>
