--- a/app/src/main/res/layout/popup_regist.xml
+++ b/app/src/main/res/layout/popup_regist.xml
@@ -14,9 +14,12 @@
         android:orientation="vertical"
         android:layout_centerHorizontal="true">
 
-        <TextView
-            android:id="@+id/tv_participation"
+        <RelativeLayout
             android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+            android:id="@+id/tv_participation"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="15dp"
@@ -24,6 +27,19 @@
             android:textSize="18sp"
             android:fontFamily="@font/m_gothic_extrabold"
             android:textColor="@color/focusText"/>
+            <TextView
+                android:id="@+id/tv_expTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="15dp"
+                android:layout_marginStart="10dp"
+                android:layout_toEndOf="@id/tv_participation"
+                android:layout_alignBaseline="@id/tv_participation"
+                android:textSize="14sp"
+                android:fontFamily="@font/m_gothic_extrabold"
+                android:textColor="@color/focusText" />
+        </RelativeLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
