db연결 예외처리 및 액티비티 정리

--- a/app/src/main/res/layout/activity_helpcom.xml
+++ b/app/src/main/res/layout/activity_helpcom.xml
@@ -63,11 +63,23 @@
 
             <TableRow>
                 <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:fontFamily="@font/m_gothic_bold"
+                    android:text="전시해설 등록안내"
+                    android:textSize="23sp"
+                    android:textColor="#000">
+                </TextView>
+            </TableRow>
+
+            <TableRow>
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:fontFamily="@font/m_gothic_bold"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="20dp"
                     android:layout_marginBottom="10dp"
                     android:text="관람등록처"
                     android:textSize="21sp" />
@@ -97,7 +109,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="25dp"
-                    android:text="정기 휴관일 : 월요일 이용불가\n                       (공휴일인 경우 가능)"
+                    android:text="정기 휴관일 : 토, 일, 월요일 이용불가\n                     (월요일은 공휴일인 경우 가능)"
                     android:textColor="@color/colorPrimary"
                     android:textSize="16sp" />
             </TableRow>
@@ -117,22 +129,22 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
-                    android:text="● 관람시간 : 2시간 이상"
+                    android:text="● 관람시간 : 1시간 이상"
                     android:textSize="15sp" />
             </TableRow>
 
             <TableRow>
                 <TextView
+                    android:id="@+id/tv_red1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
-                    android:text="● 관람확인 : 각 전시관 별 QR코드 확인"
                     android:textSize="15sp" />
             </TableRow>
 
             <TableRow>
                 <TextView
-                    android:id="@+id/tv_red"
+                    android:id="@+id/tv_red2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="25dp"
@@ -154,8 +166,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:lineSpacingExtra ="5dp"
-                    android:text="● 하절기(3월~10월) : 15:50 이전
-                         \n● 동절기(11월~2월) : 14:50 이전"
+                    android:text="● 신청 해설관람 시간 10분전"
                     android:textSize="15sp" />
             </TableRow>
 
