--- a/app/src/main/res/layout/activity_normal.xml
+++ b/app/src/main/res/layout/activity_normal.xml
@@ -272,7 +272,7 @@
         </ListView>
 
         <ImageButton
-            android:id="@+id/location"
+            android:id="@+id/but_gps"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/gps_off"
