--- a/app/src/main/res/layout/activity_compare.xml
+++ b/app/src/main/res/layout/activity_compare.xml
@@ -15,7 +15,7 @@
         android:visibility="gone"
         android:id="@+id/surface_view" />
     <ImageView
-        android:id="@+id/correct_img"
+        android:id="@+id/correct_img2"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:scaleType="fitStart"/>
@@ -29,5 +29,38 @@
         android:layout_marginBottom="25dp"
         android:src="@drawable/capture"
         android:background="@null" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/showHowText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="40sp"
+            android:text="사진을 확인하셨으면 \n클릭해 주세요."
+            android:textStyle="bold"
+            android:gravity="center"
+            android:background="#FFFFFF"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+        <ImageView
+            android:id="@+id/correct_img1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/showHowText"
+            android:scaleType="fitCenter"
+            android:onClick="imgClick"
+            android:background="#000000"/>
+    </RelativeLayout>
+
+
 
 </RelativeLayout>
