--- a/app/src/main/res/layout/activity_ocr.xml
+++ b/app/src/main/res/layout/activity_ocr.xml
@@ -15,6 +15,11 @@
         android:visibility="gone"
         android:id="@+id/activity_surface_view" />
 
+    <ImageView
+        android:id="@+id/img"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
     <ImageButton
         android:id="@+id/button_capture"
         android:layout_width="wrap_content"
