종료된 사용자 노티피케이션 오류 수정 NormalActivity 상단 time버튼 텍스트 색 변경

--- a/app/src/main/res/layout/activity_normal.xml
+++ b/app/src/main/res/layout/activity_normal.xml
@@ -44,6 +44,7 @@
             android:layout_height="30dp"
             android:layout_centerHorizontal="true"
             android:text="Time"
+            android:textColor="@color/white"
             android:background="@drawable/round_button"
             android:onClick="timeOn"/>
 
