TimerHandler 메모리 누수 문제 해결 코드 정리

--- a/app/src/main/res/layout/activity_confirm.xml
+++ b/app/src/main/res/layout/activity_confirm.xml
@@ -40,7 +40,7 @@
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
             android:layout_centerInParent="true"
             android:layout_marginEnd="10dp"
             android:background="@drawable/download"
@@ -124,7 +124,7 @@
                     android:fontFamily="@font/m_gothic_bold"
                     android:textSize="15sp"
                     android:padding="3dp"
-                    android:layout_marginRight="0.5dp"
+                    android:layout_marginEnd="0.5dp"
                     android:text="구분"
                     android:background="#BDBDBD"
                     android:textColor="@color/focusText"/>
@@ -137,7 +137,7 @@
                     android:fontFamily="@font/m_gothic_bold"
                     android:textSize="15sp"
                     android:padding="3dp"
-                    android:layout_marginRight="0.5dp"
+                    android:layout_marginEnd="0.5dp"
                     android:text="방문자"
                     android:background="#BDBDBD"
                     android:textColor="@color/focusText"/>
@@ -150,7 +150,7 @@
                     android:fontFamily="@font/m_gothic_bold"
                     android:textSize="15sp"
                     android:padding="3dp"
-                    android:layout_marginRight="0.5dp"
+                    android:layout_marginEnd="0.5dp"
                     android:text="방문일"
                     android:background="#BDBDBD"
                     android:textColor="@color/focusText"/>
@@ -174,7 +174,7 @@
                     android:layout_height="match_parent"
                     android:layout_gravity="center_vertical"
                     android:gravity="center"
-                    android:layout_marginRight="0.5dp"
+                    android:layout_marginEnd="0.5dp"
                     android:padding="3dp"
                     android:textSize="14sp"
                     android:background="#FFFFFF"
@@ -186,7 +186,7 @@
                     android:layout_height="match_parent"
                     android:layout_gravity="center_vertical"
                     android:gravity="center"
-                    android:layout_marginRight="0.5dp"
+                    android:layout_marginEnd="0.5dp"
                     android:padding="3dp"
                     android:textSize="14sp"
                     android:background="#FFFFFF"
@@ -198,7 +198,7 @@
                     android:layout_height="match_parent"
                     android:layout_gravity="center_vertical"
                     android:gravity="center"
-                    android:layout_marginRight="0.5dp"
+                    android:layout_marginEnd="0.5dp"
                     android:padding="3dp"
                     android:textSize="14sp"
                     android:background="#FFFFFF"
@@ -262,7 +262,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_below="@+id/tv_date1"
-            android:layout_toRightOf="@+id/tv_4"
+            android:layout_toEndOf="@+id/tv_4"
             android:layout_marginTop="60dp"
             android:layout_marginStart="10dp"
             android:src="@drawable/confirm_stamp" />
