--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -156,7 +156,7 @@
 
         </RelativeLayout>
 
-        <!-- 로그아웃 버튼 -->
+        <!-- 도움말 버튼 -->
         <RelativeLayout
             android:id="@+id/bt_information"
             android:layout_width="50dp"
@@ -193,7 +193,7 @@
             <TextView
                 android:layout_width="70dp"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="5dp"
+                android:layout_marginEnd="5dp"
                 android:layout_centerVertical="true"
                 android:layout_toStartOf="@id/iv_logout"
                 android:text="로그아웃"
