--- a/app/src/main/res/layout/popup_time.xml
+++ b/app/src/main/res/layout/popup_time.xml
@@ -16,9 +16,10 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:layout_gravity="center_horizontal"
+            android:layout_margin="5dp"
             android:fontFamily="@font/m_gothic_bold"
             android:text="관람시간"
-            android:textSize="40sp"
+            android:textSize="32sp"
             android:textColor="#FFFFFF" />
 
     </RelativeLayout>
@@ -33,8 +34,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
+            android:layout_margin="5dp"
             android:gravity="center"
-            android:textSize="40sp"
+            android:textSize="32sp"
             android:textColor="#000000"/>
 
     </RelativeLayout>
